# bookmarks_collection

./: .gitignore  .pre-commit-config.yaml  .vercelignore  LICENSE  README.md  modd.conf  mypy.ini  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
.github/: dependabot.yml  main.workflow
.github/workflows/: push.yml
bookmarks_collection/: bookmarks.py  helpers.py  main.py  objects.py
bookmarks_collection/templates/: _macros.html  index.css  index.html
