[tool.poetry]
name = "bookmarks_collection"
version = "0.1.0"
description = "A tool to serve Firefox bookmarks as API or HTML"
authors = ["Thomas Gaudin <thomas.gaudin@centraliens-lille.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^0.31"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0",allows-prereleases = true}
pre-commit = "^1.19"
mypy = "^0.720.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
