[tool.poetry]
name = "bookmarks_collection"
version = "0.1.0"
description = "A tool to serve Firefox bookmarks as API or HTML"
authors = ["Thomas Gaudin <thomas.gaudin@centraliens-lille.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0",allows-prereleases = true}
pre-commit = "^1.21"
mypy = "^0.740"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
