[tool.poetry]
name = "bookmarks_collection"
version = "0.1.0"
description = "A tool to serve Firefox bookmarks as API or HTML"
authors = ["Thomas Gaudin <thomas.gaudin@centraliens-lille.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"
Jinja2 = "^2.11.2"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}
pre-commit = "^2.6.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
